added actual content

--- a/_posts/2000-01-02-courses.md
+++ b/_posts/2000-01-02-courses.md
@@ -5,32 +5,32 @@ color: white
 icon: img/logo2.png
 ---
 
-## Computer Aided Archaeology
+## Statistical Methods for Archaeological Data Analysis (SMADA)
 {: .text-white}
 
 <div id="coursescontainer">
 <div id="coursesbox">
-<a class="boxlinks"  href="https://nwfsc-timeseries.github.io/atsa/">Course Website</a><br>
+<a class="boxlinks"  href="https://martinhinz.github.io/smada2021">Course Website</a><br>
 Lectures pdfs, lecture video recordings, course handouts and exercises.
 </div>
 <div id="coursesbox">
-<a class="boxlinks" href="https://nwfsc-timeseries.github.io/atsa-labs/">Book</a><br>
-Online book based on the course and computer labs.<br>
+<a class="boxlinks" href="https://martinhinz.github.io/smada2021/book/preface.html">Book</a><br>
+Online book based on the course.<br>
 </div>
 </div>
 
 <div style="padding: 20px"></div>
 
-## Statistical methods for archaeological data analysis
+## GIS in Archaeology (GIA)
 {: .text-white}
 
 <div id="coursescontainer">
 <div id="coursesbox">
-<a class="boxlinks"  href="https://fish-forecast.github.io/Fish-Forecast-Webpage/">Course Website</a><br>
-Use R to model and forecast catch time series using a variety of standard forecasting models.
+<a class="boxlinks" href="https://martinhinz.github.io/gia_hs_2020">Course Website</a><br>
+Using QGIS for archeological investigations.
 </div>
 <div id="coursesbox">
-<a class="boxlinks" href="https://fish-forecast.github.io/Fish-Forecast-Bookdown/">Book</a><br>
-Online book based on the course and computer labs.<br>
+<a class="boxlinks" href="">Book</a><br>
+Yet to come.<br>
 </div>
 </div>
