added link to ca_2019

--- a/_posts/2000-01-02-courses.md
+++ b/_posts/2000-01-02-courses.md
@@ -5,6 +5,23 @@ color: white
 icon: img/logo2.png
 ---
 
+## Computer Aided Archaeology (CAA)
+{: .text-white}
+
+<div id="coursescontainer">
+<div id="coursesbox">
+<a class="boxlinks"  href="https://martinhinz.github.io/ca_hs_2019">Course Website</a><br>
+Lectures pdfs, lecture video recordings, course handouts and exercises.
+</div>
+<div id="coursesbox">
+<a class="boxlinks" href="">Book</a><br>
+Yet to come.<br>
+</div>
+</div>
+
+<div style="padding: 20px"></div>
+
+
 ## Statistical Methods for Archaeological Data Analysis (SMADA)
 {: .text-white}
 
