added text to intro

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -7,3 +7,9 @@ style: center
 # Bern CoDA Lab
 ## Courses, eBooks, Software, and Publications
 {: .text-blue}
+
+The Bern Computational and Digital Archaeology lab (Bern CoDA Lab) is a research infrastructure hosted by the Institute for Archaeological Sciences of the University of Bern. It focuses on the promotion, support and development of computational and quantitative methods in archaeological research, from the initial data collecting, incl. adequate data management and storage, to the data processing and analysis, and not least to its visual presentation. The careful assessment of the data, the critical reflection of the methodology, and the thorough, integrative discussion of the achieved results are a matter of course.
+
+Besides offering a series of equipment, software applications and further resources, we regularly provide targeted training and workshops in order to promote and exchange different approaches in computational and digital archaeology, all in a competent and stimulating research environment. We furthermore aim to sustainably contribute to the development of computational and digital archaeology. 
+
+
