updated heading hierarchy

--- a/_posts/2000-01-02-courses.md
+++ b/_posts/2000-01-02-courses.md
@@ -5,9 +5,9 @@ color: white
 icon: img/logo2.png
 ---
 
-# Courses
+## Courses
 
-## Computer Aided Archaeology (CAA)
+### Computer Aided Archaeology (CAA)
 {: .text-white}
 
 <div id="coursescontainer">
@@ -24,7 +24,7 @@ Yet to come.<br>
 <div style="padding: 20px"></div>
 
 
-## Statistical Methods for Archaeological Data Analysis (SMADA)
+### Statistical Methods for Archaeological Data Analysis (SMADA)
 {: .text-white}
 
 <div id="coursescontainer">
@@ -40,7 +40,7 @@ Online book based on the course.<br>
 
 <div style="padding: 20px"></div>
 
-## GIS in Archaeology (GIA)
+### GIS in Archaeology (GIA)
 {: .text-white}
 
 <div id="coursescontainer">
