removed unecessary book links, added predmap tutorial

--- a/_posts/2000-01-02-courses.md
+++ b/_posts/2000-01-02-courses.md
@@ -15,10 +15,6 @@ icon: img/logo2.png
 <a class="boxlinks"  href="https://martinhinz.github.io/ca_hs_2019">Course Website</a><br>
 Lectures pdfs, lecture video recordings, course handouts and exercises.
 </div>
-<div id="coursesbox">
-<a class="boxlinks" href="">Book</a><br>
-Yet to come.<br>
-</div>
 </div>
 
 <div style="padding: 20px"></div>
@@ -48,8 +44,14 @@ Online book based on the course.<br>
 <a class="boxlinks" href="https://martinhinz.github.io/gia_hs_2020">Course Website</a><br>
 Using QGIS for archeological investigations.
 </div>
+</div>
+
+### Tutorial 'Predictive Mapping in R' (8th of February 2019)
+{: .text-white}
+
+<div id="coursescontainer">
 <div id="coursesbox">
-<a class="boxlinks" href="">Book</a><br>
-Yet to come.<br>
+<a class="boxlinks" href="https://martinhinz.github.io/pred_map_tut">Slides</a><br>
+Using R to predict site probability using environmental variables.
 </div>
 </div>
