added spacer for courses

--- a/_posts/2000-01-02-courses.md
+++ b/_posts/2000-01-02-courses.md
@@ -46,6 +46,8 @@ Using QGIS for archeological investigations.
 </div>
 </div>
 
+<div style="padding: 20px"></div>
+
 ### Tutorial 'Predictive Mapping in R' (8th of February 2019)
 {: .text-white}
 
