added andy to contact list

--- a/_posts/2000-01-07-contact.md
+++ b/_posts/2000-01-07-contact.md
@@ -32,4 +32,9 @@ icon: img/logo2.png
 <a href="https://www.iaw.unibe.ch/ueber_uns/amm_personen/dr_weiss_christian" style="text-decoration:none">Christian Weiss</a>
 </div>
 
+<div id="contactsbox">
+<a href="https://www.iaw.unibe.ch/ueber_uns/arp_amp_pa_personen/dr_lawrence_andrew" style="text-decoration:none"><img src="img/andrewlawrence.jpg" style="width: 100%;border-radius:50%"></a><br>
+<a href="https://www.iaw.unibe.ch/ueber_uns/arp_amp_pa_personen/dr_lawrence_andrew" style="text-decoration:none">Andrew Lawrence</a>
+</div>
+
 </div>
